# generic-alignerr-project

./: .gitignore  Dockerfile  Dockerfile.java  Dockerfile.python  Dockerfile.typescript  README.md  docker-compose-java.yml  docker-compose-python.yml  docker-compose-typescript.yml  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  sqlite.db  tsconfig.json
docs/: 0-READ_BEFORE_TASK.py  1.md  2.md  TASK_0_READ_BEFORE_TASK.py  TASK_1_CREATE_PROJECT.md  TASK_1_setup_task_manager.md  TASK_2_CREATE_DJANGO_PROJECT.md  TASK_2_rest_api.md
drizzle/: 0000_open_ogun.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: db.sqlite3  index.ts  manage.py  schema.ts  views.py
src/generic_alignerr_project/: settings.py  urls.py  wsgi.py
src/static/: styles.css
src/tasks/: models.py  services.py  views.py
src/tasks/migrations/: 0001_initial.py
src/tasks/static/: base.css
src/tasks/templates/: base.html
src/templates/: about.html  base.html
src/templates/tasks/: list.html
src/todo_platform/: asgi.py  settings.py  urls.py  wsgi.py
