[tool.poetry]
name = "generic-alignerr-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Glauber Brennon",email = "glauberbrennon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "todo_platform" }
]
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
